Kubernetes_2026/Deployments/canary-deployments/canary-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  namespace: payments
spec:
  selector:
    app: payments-api
  ports:
  - port: 80
    targetPort: 8080
