Kubernetes_2026/Deployments/canary-deployments/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-app-svc-ingress
  labels:
    app.kubernetes.io/name: payments-app-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    ngunx.ingress.kubernetes.io/canary-weight: "10" # ingress controller route 10% of traffic to canary service 
  ingressClassName: "nginx"
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: canary-svc
            port: 
              number: 80
