Kubernetes_2026/Deployments/canary-deployments/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-svc-ingress
  namespace: payments
  labels:
    app.kubernetes.io/name: payments-app-svc-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: stable-svc
            port: 
              number: 80
